objects/Not_Dispatched_Platform_Event__e.object
<CustomObject>
    <description>@TODO Refactor in order to rename to be more similar to others</description>
    <fields>
        <fullName>DML_Action__c</fullName>
        <label>DML Action</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Service_Appointment_Status__c</fullName>
        <label>Previous Service Appointment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Id__c</fullName>
        <label>Service Appointment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment_Status__c</fullName>
        <label>Service Appointment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Not Dispatched Platform Event</label>
    <pluralLabel>Note Dispatched Platform Events</pluralLabel>
</CustomObject>